# bible-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  bible.opam  dune-project  dune-workspace.bak  todo.md
.github/workflows/: build.yml
lib/: dune  formatter.ml  formatter.mli
lib/api/: api.ml  api.mli  dune
lib/commands/: cmd_list.ml  cmd_list.mli  cmd_read.ml  cmd_read.mli  dune
lib/config/: config.ml  config.mli  dune
lib/models/: dune  models.ml  models.mli
scripts/: setup-cross-compile.sh
test/: dune
